@@ -24,10 +24,10 @@ import org.apache.hama.HamaAdmin;
 import org.apache.hama.HamaAdminImpl;
 import org.apache.hama.examples.mapreduce.DummyMapper;
 import org.apache.hama.examples.mapreduce.JacobiInitMap;
+import org.apache.hama.examples.mapreduce.Pair;
 import org.apache.hama.examples.mapreduce.PivotInputFormat;
 import org.apache.hama.examples.mapreduce.PivotMap;
 import org.apache.hama.examples.mapreduce.RotationInputFormat;
-import org.apache.hama.io.Pair;
 import org.apache.hama.matrix.DenseMatrix;
 import org.apache.hama.matrix.Matrix;
 import org.apache.hama.util.BytesUtil;
