@@ -37,12 +37,12 @@ import org.apache.hadoop.mapreduce.Job;
 import org.apache.hama.Constants;
 import org.apache.hama.HamaAdmin;
 import org.apache.hama.HamaAdminImpl;
+import org.apache.hama.examples.mapreduce.BlockID;
 import org.apache.hama.examples.mapreduce.BlockMultMap;
 import org.apache.hama.examples.mapreduce.BlockMultReduce;
 import org.apache.hama.examples.mapreduce.CollectBlocksMapper;
 import org.apache.hama.examples.mapreduce.DenseMatrixVectorMultMap;
 import org.apache.hama.examples.mapreduce.DenseMatrixVectorMultReduce;
-import org.apache.hama.io.BlockID;
 import org.apache.hama.matrix.DenseMatrix;
 import org.apache.hama.matrix.Matrix;
 import org.apache.hama.util.RandomVariable;
