@@ -17,7 +17,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-package org.apache.hama.io;
+package org.apache.hama.examples.mapreduce;
 
 import java.io.DataInput;
 import java.io.DataOutput;
