@@ -11,7 +11,6 @@ import org.apache.hadoop.hbase.util.Bytes;
 import org.apache.hadoop.io.MapWritable;
 import org.apache.hadoop.io.Writable;
 import org.apache.hama.Constants;
-import org.apache.hama.io.BlockID;
 import org.apache.hama.matrix.DenseVector;
 import org.apache.hama.matrix.SubMatrix;
 
