@@ -17,7 +17,7 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-package org.apache.hama.io;
+package org.apache.hama.examples;
 
 import java.io.IOException;
 
@@ -27,6 +27,7 @@ import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.apache.hadoop.io.DataInputBuffer;
 import org.apache.hadoop.io.DataOutputBuffer;
+import org.apache.hama.examples.mapreduce.BlockID;
 
 public class TestBlockID extends TestCase {
   final static Log LOG = LogFactory.getLog(TestBlockID.class.getName());
