@@ -28,9 +28,9 @@ import org.apache.hadoop.mapreduce.lib.input.SequenceFileInputFormat;
 import org.apache.hama.Constants;
 import org.apache.hama.HamaCluster;
 import org.apache.hama.HamaConfiguration;
+import org.apache.hama.examples.mapreduce.BlockID;
 import org.apache.hama.examples.mapreduce.BlockMultMap;
 import org.apache.hama.examples.mapreduce.BlockMultReduce;
-import org.apache.hama.io.BlockID;
 import org.apache.hama.matrix.DenseMatrix;
 import org.apache.hama.matrix.DenseVector;
 import org.apache.hama.matrix.Matrix;
